V0.7.7
- Bugfix for below, Day is not the same as Daily!
- add Longdescription new style for one day as that's all we've got

V0.7.6
- Set some more properties with standardised names for better non confluence skin support
- Add support for banner.png WeatherProviderLogo

V0.7.5
- Updates to scraper due to frickin' reverted Weatherzone changes
- Should cope with both old and new website versions with some luck
- Also updated ABC url scraping to be a bit more robust

V0.7.4 
- Updates to scraper due to Weatherzone changes

V0.7.3 
- add new script.module.pil to dependencies

V0.7.2 
- addon.xml per Gotham requirements

V0.7.1
- Fixed ABC weather video link again - apparently they use multiple servers

V0.7.0
- Fixed ABC weather video link
- Added setting for weather video qualtiy level

V0.6.9
- Unreleased, repo moved to github

V0.6.8
- Deal with blank radar codes in user settings
- Better tidying up old radar images

V0.6.7
- Added sunrise/sunset, rain predictions to 7 day forecast

V0.6.6
- Use mathematical rounding instead of skin truncating

V0.6.5 
- Bit of defensive programming to deal with parsedom and weatherzone issue

V0.6.4
- pan2 changes merged - adds date labels

V0.6.3
- Can now search by suburb name not just postcode

V0.6.1
- Bump for Frodo
- Cleanup, better logging (in debug mode)
- Refactor & incorporate b808 common code (0.0.8)
- Bugfix for proxy users   

V0.4.4
- Minor data cleanup as Weatherzone returns crap data sometimes

V0.4.3
- Fixes for fixes for capatilisation :)

V0.4.2
- Fixes for capatilisation
- Fixes for parsedom 1.2 unicode behaviour

V0.3.8
- Only import PIL if extended features are activated (means on paltforms like Crystalbuntu without PIL you can still get BOM weather data at least.
- some radars (e.g. IDR072) - were not on the ftp server, they now get pulled in by http
- backgrounds are refreshed every 24 hours to pick up any changes at the BOM

V0.3.7